CSSTUDIO-3420 Change type from LinkedList<Double> to ArrayList<Double> for representing waveforms.